--- a/styles/main.css
+++ b/styles/main.css
@@ -1440,26 +1440,32 @@ svg * {
 }
 @media (max-width: 1024px) {
   .photos {
-    row-gap: 30px;
+    row-gap: 30.5px;
   }
 }
 @media (max-width: 360px) {
   .photos {
-    margin-top: -1px;
     padding-inline: 21px;
     row-gap: 18px;
   }
 }
-@media (max-width: 360px) {
-  .photos--margin-top-mobile {
-    margin-top: 0;
-  }
-}
 .photos__row {
   display: flex;
+  column-gap: 29.5px;
   width: 100%;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
+}
+@media (max-width: 1024px) {
+  .photos__row {
+    column-gap: 20px;
+    align-items: auto;
+  }
+}
+@media (max-width: 360px) {
+  .photos__row {
+    column-gap: 10px;
+  }
 }
 
 @media (max-width: 1024px) {
